<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileCalculatorView"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="0"
        android:textSize="50sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@color/displayNumText"
        android:singleLine="true"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textSize="60sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@color/displayNumText"
        android:singleLine="true"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/calcBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/button2Background"
                android:stateListAnimator="@null"
                android:text="C"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPosNeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/button2Background"
                android:stateListAnimator="@null"
                android:text="\u207A\u2215\u208B"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBackspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/button2Background"
                android:stateListAnimator="@null"
                android:text="⌫"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/operatorButtonBackground"
                android:stateListAnimator="@null"
                android:text="/"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/calcBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="1"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="2"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="3"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/operatorButtonBackground"
                android:stateListAnimator="@null"
                android:text="*"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/calcBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="4"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="5"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="6"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/operatorButtonBackground"
                android:stateListAnimator="@null"
                android:text="-"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/calcBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="7"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="8"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="9"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/operatorButtonBackground"
                android:stateListAnimator="@null"
                android:text="+"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/calcBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="."
                android:textColor="@color/buttonText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="0"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:stateListAnimator="@null"
                android:text="%"
                android:textColor="@color/buttonText"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEqual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/operatorButtonBackground"
                    android:stateListAnimator="@null"
                    android:text="="
                    android:textColor="@color/buttonText"
                    android:textSize="16sp" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>